[gd_scene load_steps=26 format=2]

[ext_resource path="res://moveable.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Terrain/platform).png" type="Texture" id=2]
[ext_resource path="res://Other/Confetti (16x16).png" type="Texture" id=3]
[ext_resource path="res://CoinDisplay.gd" type="Script" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://LevelUp.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=7]
[ext_resource path="res://health.gd" type="Script" id=8]
[ext_resource path="res://DisplayLevel.gd" type="Script" id=9]
[ext_resource path="res://Fonts/DigitalArcade.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Other/Dust Particle.png" type="Texture" id=11]
[ext_resource path="res://Clouds.tres" type="Animation" id=12]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=13]
[ext_resource path="res://WIN.mp3" type="AudioStream" id=14]
[ext_resource path="res://hitHurt.wav" type="AudioStream" id=15]
[ext_resource path="res://jump.wav" type="AudioStream" id=16]
[ext_resource path="res://pickupCoin.wav" type="AudioStream" id=17]
[ext_resource path="res://powerUp.wav" type="AudioStream" id=18]
[ext_resource path="res://ButtonTheme.tres" type="Theme" id=19]
[ext_resource path="res://UP.tres" type="Animation" id=20]

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 10.5, 13.5 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 10.5, 13.5 )

[sub_resource type="Animation" id=30]
resource_name = "Damage"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ssSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ true, false, true, false, true, false, true ]
}

[sub_resource type="Theme" id=31]

[sub_resource type="DynamicFont" id=32]
size = 23
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
position = Vector2( -4, -19 )
collision_layer = 49235
collision_mask = 49235
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="ssSprite" type="AnimatedSprite" parent="." groups=["Player"]]
frames = ExtResource( 1 )
animation = "Idle"
frame = 4
playing = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2( 0.5, 2.5 )
shape = SubResource( 33 )

[node name="Collect" type="Area2D" parent="." groups=["Player"]]
collision_layer = 49235
collision_mask = 49235

[node name="Hitbox" type="CollisionShape2D" parent="Collect" groups=["Player"]]
position = Vector2( 0.5, 2.5 )
shape = SubResource( 34 )

[node name="CanvasLayer2" type="ParallaxBackground" parent="."]
layer = -2
scroll_offset = Vector2( 5, 5 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2"]
self_modulate = Color( 1, 1, 1, 0.431373 )
margin_left = -2.0
margin_top = -4.0
margin_right = 314.0
margin_bottom = 1025.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer2/TextureRect"]
layer = -3

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
margin_left = 606.0
margin_top = 48.0
margin_right = 758.978
margin_bottom = 82.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect6" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 320.638
margin_top = 68.0
margin_right = 473.652
margin_bottom = 102.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect7" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 275.0
margin_top = 22.0
margin_right = 428.032
margin_bottom = 56.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect8" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 531.595
margin_top = 6.0
margin_right = 684.595
margin_bottom = 40.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect9" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 359.609
margin_top = 184.0
margin_right = 512.587
margin_bottom = 218.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect10" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 369.883
margin_top = 204.0
margin_right = 522.896
margin_bottom = 238.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect11" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 486.11
margin_top = 158.0
margin_right = 639.142
margin_bottom = 192.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect12" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 321.0
margin_top = 142.0
margin_right = 474.0
margin_bottom = 176.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect13" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 446.609
margin_top = 98.0
margin_right = 599.587
margin_bottom = 132.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect14" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 456.883
margin_top = 118.0
margin_right = 609.896
margin_bottom = 152.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect15" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 573.11
margin_top = 72.0
margin_right = 726.142
margin_bottom = 106.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect16" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 408.0
margin_top = 56.0
margin_right = 561.0
margin_bottom = 90.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect17" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 523.609
margin_top = 199.0
margin_right = 676.587
margin_bottom = 233.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect18" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 533.883
margin_top = 219.0
margin_right = 686.896
margin_bottom = 253.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect19" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 650.11
margin_top = 173.0
margin_right = 803.142
margin_bottom = 207.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect20" type="TextureRect" parent="CanvasLayer2/TextureRect/CanvasLayer"]
visible = false
margin_left = 485.0
margin_top = 157.0
margin_right = 638.0
margin_bottom = 191.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer2"]
self_modulate = Color( 1, 1, 1, 0.431373 )
margin_left = 706.0
margin_top = -5.0
margin_right = 1022.0
margin_bottom = 1024.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer2"]
self_modulate = Color( 1, 1, 1, 0.431373 )
margin_left = 311.0
margin_top = 251.0
margin_right = 710.0
margin_bottom = 1021.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer2"]
self_modulate = Color( 1, 1, 1, 0.431373 )
margin_left = 314.0
margin_top = 9.0
margin_right = 713.0
margin_bottom = 265.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Camera2D" type="Camera2D" parent="." groups=["Player"]]
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 7.0
editor_draw_drag_margin = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 30 )

[node name="Node" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["Player"]]

[node name="health" type="Panel" parent="CanvasLayer" groups=["Player"]]
margin_left = 75.0
margin_top = 3.0
margin_right = 75.0
margin_bottom = 35.0
script = ExtResource( 8 )

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/health" groups=["Player"]]
margin_bottom = 32.0
columns = 5

[node name="PopupPanel" parent="CanvasLayer" groups=["Player"] instance=ExtResource( 6 )]
margin_right = 185.0
margin_bottom = 302.0
popup_exclusive = true

[node name="Panel" parent="CanvasLayer/PopupPanel" index="1"]
margin_bottom = -7.32159

[node name="GameOver" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_top = 3.0
margin_right = 75.0
margin_bottom = 67.0

[node name="Level" type="Label" parent="CanvasLayer/Panel"]
margin_left = 5.0
margin_top = 2.0
margin_right = 68.0
margin_bottom = 26.0
theme = SubResource( 31 )
custom_fonts/font = SubResource( 32 )
text = "Level  1"
script = ExtResource( 9 )

[node name="Coin" type="Label" parent="CanvasLayer/Panel"]
margin_left = 4.0
margin_top = 34.0
margin_right = 86.0
margin_bottom = 58.0
theme = SubResource( 31 )
custom_fonts/font = SubResource( 32 )
text = "Coins: 34"
script = ExtResource( 4 )

[node name="pause" parent="CanvasLayer" instance=ExtResource( 13 )]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Clouds = ExtResource( 12 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
anims/Up = ExtResource( 20 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
pitch_scale = 1.85

[node name="LSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="Label" type="Label" parent="."]
margin_left = -22.0
margin_top = -33.0
margin_right = 18.0
margin_bottom = -19.0
theme = ExtResource( 19 )
text = "Level Up"

[node name="Label2" type="Label" parent="."]
margin_left = -147.0
margin_top = -119.0
margin_right = 158.0
margin_bottom = -94.0
theme = ExtResource( 19 )
text = "TIMe Till door unlocks "

[node name="Timer" type="Timer" parent="Label2"]

[connection signal="Birth" from="." to="CanvasLayer/health" method="_on_Player_Birth"]
[connection signal="Display" from="." to="CanvasLayer/Panel/Level" method="_on_Player_Display"]
[connection signal="Display2" from="." to="CanvasLayer/Panel/Coin" method="_on_Player_Display2"]
[connection signal="lockControls" from="." to="." method="_on_Player_lockControls"]
[connection signal="takeDamage" from="." to="CanvasLayer/health" method="_on_Player_takeDamage"]
[connection signal="level" from="CanvasLayer/PopupPanel" to="." method="_on_PopupPanel_level"]
[connection signal="animation_finished" from="AnimationPlayer3" to="." method="_on_AnimationPlayer3_animation_finished"]
[connection signal="finished" from="LSound" to="." method="_on_LSound_finished"]
[connection signal="finished" from="CoinSound" to="." method="_on_CoinSound_finished"]
[connection signal="timeout" from="Label2/Timer" to="." method="_on_Timer_timeout"]

[editable path="CanvasLayer/PopupPanel"]
[editable path="CanvasLayer/pause"]
